tests/compile-fail/semck/undeclared-variable.rs
fn main() {
    a + 1;  //! ERROR(2:5): variable `a` not declared
    let a: int = 0;
}